--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -32,6 +32,7 @@
 /** daisyUI */
 @plugin "daisyui" {
     themes: light --default, dark --prefersdark;
+    exclude: properties;
 }
 
 @plugin "daisyui/theme" {
@@ -55,6 +56,9 @@
     .textarea,
     .select {
         @apply shadow-xs border-zinc-300;
+    }
+    .btn-ghost {
+        color: var(--color-base-content);
     }
 }
 
